--- a/projects/faq/src/lib/question/question.component.scss
+++ b/projects/faq/src/lib/question/question.component.scss
@@ -6,7 +6,7 @@
   margin-top: 16px;
 
   @media (prefers-color-scheme: dark) {
-    --question__border-color: var(--color--deep-teal);
+    --question__border-color: var(--color--gray-700);
   }
 }
 
