refactor(faq): use div instead of h3 for title

--- a/projects/faq/src/lib/faq.component.html
+++ b/projects/faq/src/lib/faq.component.html
@@ -1,4 +1,4 @@
-<h3>Frequently asked questions</h3>
+<div class="faq__title">Frequently asked questions</div>
 
 <div class="questions">
   <ng-content #questions></ng-content>
