feat(mega-menu): allow for CSS variable for gap

--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
@@ -84,7 +84,7 @@
   --columns: 2;
 
   display: grid;
-  gap: 3.2rem;
+  gap: var(--mega-menu__gap, 3.2rem);
   // grid-gap: 3.2rem;
   grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
 
