refactor(faq): change FAQ title to a div that matches old style

--- a/projects/faq/src/lib/faq.component.html
+++ b/projects/faq/src/lib/faq.component.html
@@ -1,4 +1,4 @@
-<div class="faq__title">Frequently asked questions</div>
+<div class="faq__title typography">Frequently asked questions</div>
 
 <div class="questions">
   <ng-content #questions></ng-content>
