--- a/projects/faq/src/lib/faq.component.scss
+++ b/projects/faq/src/lib/faq.component.scss
@@ -21,5 +21,9 @@
 }
 
 .faq__title {
+  --font-size: 2.8rem;
+  --baseline-multi: 4;
+  letter-spacing: -0.02rem;
   font-weight: var(--font-weight--bold);
+  margin-bottom: calc(2 * var(--font-line-height) - var(--baseline-offset));
 }
