refactor(mega-menu): don't handle touchend events on mega menu

--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.html
@@ -2,7 +2,7 @@
   [openOnHover]="openOnHover" [shouldShowArrow]="shouldShowArrow">
 </xcu-nav-toggle>
 
-<div (mouseleave)="onHoverOut($event)" (touchend)="onHoverOut($event)" class="mega-menu__container">
+<div (mouseleave)="onHoverOut($event)" class="mega-menu__container">
   <div class="mega-menu-shadow--bottom">
     <div class="mega-menu-shadow--top">
       <div class="mega-menu__content">
