--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -1,3 +1,9 @@
+[data-theme='dark'] :host {
+  &.primary {
+    color: var(--color--bunker, #101820);
+  }
+}
+
 :host {
   --bg-gray: #f7fafc;
   --bg-red: #fff5f5;
@@ -98,10 +104,6 @@
   &.primary {
     background-color: var(--theme--primary);
     color: #fff;
-
-    @media (prefers-color-scheme: dark) {
-      color: var(--color--bunker, #101820);
-    }
   }
 
   &.secondary {
