--- a/projects/faq/src/lib/question/question.component.scss
+++ b/projects/faq/src/lib/question/question.component.scss
@@ -1,13 +1,15 @@
-:host {
+[data-theme='light'] :host {
   --question__border-color: var(--color--gray-200);
+}
 
+[data-theme='dark'] :host {
+  --question__border-color: var(--color--gray-700);
+}
+
+:host {
   display: flex;
   flex-direction: column;
   margin-top: 16px;
-
-  @media (prefers-color-scheme: dark) {
-    --question__border-color: var(--color--gray-700);
-  }
 }
 
 :host-context(.faq-question--accordion) {
