--- a/projects/layout/panel/src/lib/footer/footer.component.scss
+++ b/projects/layout/panel/src/lib/footer/footer.component.scss
@@ -1,3 +1,13 @@
+[data-theme='light'] :host {
+  --bordered__border-color: rgba(0, 0, 0, 0.05);
+  --colored__background-color: var(--color--gray-50);
+}
+
+[data-theme='dark'] :host {
+  --bordered__border-color: rgba(0, 0, 0, 0.15);
+  --colored__background-color: #27313f;
+}
+
 :host {
   display: flex;
   flex-direction: row;
@@ -20,18 +30,10 @@
   }
 
   &.bordered {
-    border-color: rgba(0, 0, 0, 0.05);
-
-    @media (prefers-color-scheme: dark) {
-      border-color: rgba(0, 0, 0, 0.15);
-    }
+    border-color: var(--bordered__border-color);
   }
 
   &.colored {
-    background-color: var(--color--gray-50);
-
-    @media (prefers-color-scheme: dark) {
-      background-color: #27313f;
-    }
+    background-color: var(--colored__background-color);
   }
 }
