--- a/projects/navigation/list/src/lib/list-group/list-group.component.scss
+++ b/projects/navigation/list/src/lib/list-group/list-group.component.scss
@@ -1,9 +1,12 @@
-:host {
+[data-theme='light'] :host {
   --list-group__border-color: var(--color--gray-200);
+}
 
-  @media (prefers-color-scheme: dark) {
-    --list-group__border-color: var(--color--gray-800);
-  }
+[data-theme='dark'] :host {
+  --list-group__border-color: var(--color--gray-800);
+}
+
+:host {
 }
 
 :host-context(.xcu-list):not(:last-of-type) {
