--- a/projects/navigation/mega-menu/src/lib/mega-menu-footer/mega-menu-footer.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu-footer/mega-menu-footer.component.scss
@@ -1,3 +1,12 @@
+[data-theme='light'] :host {
+  --footer__background-color: var(--color--gray-50);
+}
+
+[data-theme='dark'] :host {
+  --footer__background-color: var(--color--gray-800);
+  --menu-chevron__border-color: var(--color--gray-800);
+}
+
 .xcu-mega-menu-footer {
   --footer__background-color: var(--color--gray-50);
 
@@ -6,11 +15,6 @@
   padding: 2.4rem 3.6rem;
   width: 100%;
   z-index: 20;
-
-  @media (prefers-color-scheme: dark) {
-    --footer__background-color: var(--color--gray-800);
-    --menu-chevron__border-color: var(--color--gray-800);
-  }
 
   .title {
     font-weight: var(--font-weight--bold);
