--- a/projects/navigation/stepper/src/lib/step/step.component.scss
+++ b/projects/navigation/stepper/src/lib/step/step.component.scss
@@ -18,6 +18,15 @@
   }
 }
 
+[data-theme='light'] :host {
+  --end__background-color: var(--color--hippie-green);
+}
+
+[data-theme='dark'] :host {
+  --step--accent-color: var(--color--gray-700);
+  --xcu-ring-color: #386e5e;
+}
+
 :host {
   display: flex;
   flex-direction: row;
@@ -26,10 +35,6 @@
   min-height: var(--step--min-height, 3.2rem);
   padding: var(--step--padding-y, 0) var(--step--padding-x, 1.6rem);
   position: relative;
-
-  @media (prefers-color-scheme: dark) {
-    --step--accent-color: var(--color--gray-700);
-  }
 
   &.completed {
     --step--accent-color: var(--theme--primary);
@@ -87,10 +92,6 @@
 
         box-shadow: var(--xcu-ring-inset) 0 0 0
           calc(0.4rem + var(--xcu-ring-offset-width)) var(--xcu-ring-color);
-
-        @media (prefers-color-scheme: dark) {
-          --xcu-ring-color: #386e5e;
-        }
       }
 
       &:not(.completed) {
