--- a/projects/navigation/switcher/src/lib/switcher.component.scss
+++ b/projects/navigation/switcher/src/lib/switcher.component.scss
@@ -1,13 +1,25 @@
-:host {
+[data-theme='light'] :host {
   --switcher__border-color: var(--color--gray-200);
+  --nav-link__hover-color: var(--color--gray-200);
+  --nav__border-color: var(--color--gray-100);
+  --nav__box-shadow: 0 0 0 1px rgb(136 152 170 / 10%),
+    0 15px 35px 0 rgb(49 49 93 / 10%), 0 5px 15px 0 rgb(0 0 0 / 8%);
+}
+
+[data-theme='dark'] :host {
+  --switcher__border-color: var(--color--gray-800);
+  --nav-link__hover-color: var(--color--gray-800);
+  --nav__border-color: var(--color--gray-900);
+
+  --nav__box-shadow: 0 0 0 1px rgb(136 152 170 / 10%),
+    0 15px 35px 0 rgb(49 61 93 / 24%), 0 5px 15px 0 rgb(0 0 0 / 69%);
+}
+
+:host {
   --shadow__offset: 1.6rem;
 
   display: inline-flex;
   position: relative;
-
-  @media (prefers-color-scheme: dark) {
-    --switcher__border-color: var(--color--gray-800);
-  }
 
   &.menu--active {
     .shadow {
@@ -32,27 +44,16 @@ a + .divider,
 }
 
 nav {
-  --nav-link__hover-color: var(--color--gray-200);
-
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--color--gray-100);
+  border: 1px solid var(--nav__border-color);
   background-color: var(--theme--background);
   white-space: nowrap;
   border-radius: 2px;
-  box-shadow: 0 0 0 1px rgb(136 152 170 / 10%),
-    0 15px 35px 0 rgb(49 49 93 / 10%), 0 5px 15px 0 rgb(0 0 0 / 8%);
+  box-shadow: var(--nav__box-shadow);
   max-height: var(--switcher--max-height, 48rem);
   overflow: hidden;
   overflow-y: auto;
-
-  @media (prefers-color-scheme: dark) {
-    --nav-link__hover-color: var(--color--gray-800);
-
-    border: 1px solid var(--color--gray-900);
-    box-shadow: 0 0 0 1px rgb(136 152 170 / 10%),
-      0 15px 35px 0 rgb(49 61 93 / 24%), 0 5px 15px 0 rgb(0 0 0 / 69%);
-  }
 
   .nav__link {
     display: block;
