--- a/projects/navigation/mega-menu/src/lib/mega-menu-footer/mega-menu-footer.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu-footer/mega-menu-footer.component.scss
@@ -1,16 +1,20 @@
-[data-theme='light'] :host {
-  --footer__background-color: var(--color--gray-50);
+[data-theme='light'] .xcu-mega-menu-footer {
+  --xcu-footer__background-color: var(
+    --footer__background-color,
+    var(--color--gray-50)
+  );
 }
 
-[data-theme='dark'] :host {
-  --footer__background-color: var(--color--gray-800);
+[data-theme='dark'] .xcu-mega-menu-footer {
+  --xcu-footer__background-color: var(
+    --footer__background-color,
+    var(--color--gray-800)
+  );
   --menu-chevron__border-color: var(--color--gray-800);
 }
 
 .xcu-mega-menu-footer {
-  --footer__background-color: var(--color--gray-50);
-
-  background-color: var(--footer__background-color);
+  background-color: var(--xcu-footer__background-color);
   height: 100%;
   padding: 2.4rem 3.6rem;
   width: 100%;
