--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.scss
@@ -4,7 +4,10 @@
   }
 
   .mega-menu__content {
-    --mega-menu__background-color: var(--color--white);
+    --xcu-mega-menu__background-color: var(
+      --mega-menu__background-color,
+      var(--color--white)
+    );
   }
 }
 
@@ -14,7 +17,10 @@
   }
 
   .mega-menu__content {
-    --mega-menu__background-color: var(--color--gray-900);
+    --xcu-mega-menu__background-color: var(
+      --mega-menu__background-color,
+      var(--color--gray-900)
+    );
     --mega-menu__border-color: var(--theme--background);
   }
 }
@@ -62,7 +68,7 @@
   --menu-transition-delay: var(--transition-delay, 0.05s);
   --menu-rotateX: -15deg;
 
-  border: 1px solid var(--mega-menu__border-color);
+  border: 1px solid var(--xcu-mega-menu__border-color);
   display: block;
   margin-left: var(--menu-margin-left, -2.4rem);
   margin-top: 2.4rem;
@@ -103,7 +109,7 @@
   // grid-gap: 3.2rem;
   grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
 
-  background-color: var(--mega-menu__background-color);
+  background-color: var(--xcu-mega-menu__background-color);
   padding: 3.2rem;
   position: relative;
   z-index: 20;
