refactor(loader): update mark CSS to show better in buttons

--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -114,6 +114,11 @@
   }
 
   &[disabled],
+  &.disabled {
+    --mark-color: var(--button-loader__color, var(--color--gray-500));
+  }
+
+  &[disabled],
   &.disabled,
   &.loading {
     pointer-events: none;
