--- a/projects/loader/src/lib/mark/mark.component.scss
+++ b/projects/loader/src/lib/mark/mark.component.scss
@@ -1,15 +1,15 @@
 [data-theme='dark'] :host {
-  --mark-color: var(--color--gray-800);
+  --xcu-mark-color: var(--mark-color, var(--color--gray-800));
 }
 
 :host {
   font-size: var(--mark-size, 10px);
   width: 100%;
-  height: 100%;
+  height: var(--mark-height, 2.1rem);
   max-height: 14.4em;
   max-width: 15.2em;
   position: relative;
-  color: var(--mark-color, var(--color--gray-50));
+  color: var(--xcu-mark-color, var(--mark-color, var(--color--gray-50)));
 
   .diamond {
     animation-name: spin;
