feat(mega-menu): allow rounded badges and a placement before descriptions

--- a/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.html
@@ -4,7 +4,12 @@
 <div>
   <div *ngIf="title" class="title">
     <span>{{ title }}</span>
-    <span *ngIf="badge" xcu-badge [color]="badgeColor">{{ badge }}</span>
+    <span *ngIf="badge" xcu-badge [rounded]="rounded" [color]="badgeColor">{{ badge }}</span>
   </div>
+  <ng-content select="[tagline]"></ng-content>
+
+
   <p *ngIf="description" class="description">{{ description }}</p>
+
+  <ng-content></ng-content>
 </div>
