--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -100,6 +100,7 @@
   margin-left: var(--checkbox-margin--left, 1.2rem);
   line-height: 2rem;
   color: var(--textcolor--secondary);
+  width: var(--checkbox__width, auto);
 }
 
 .end {
