refactor(list): add CSS variables for list icon fill and strokes

--- a/projects/navigation/list/src/lib/list-item-content/list-item-content.component.scss
+++ b/projects/navigation/list/src/lib/list-item-content/list-item-content.component.scss
@@ -3,7 +3,8 @@
   align-items: center;
 
   svg {
-    fill: var(--textcolor--secondary, currentColor);
+    fill: var(--list-icon__fill, currentColor);
+    stroke: var(--list-icon__stroke, currentColor);
     margin-right: 1.6rem;
   }
 }
