--- a/projects/layout/panel/src/lib/panel.component.scss
+++ b/projects/layout/panel/src/lib/panel.component.scss
@@ -1,5 +1,6 @@
 [data-theme='light'] :host {
   --background-color: var(--color--white);
+  --well__color: var(--color--gray-50);
 
   &.well-on-gray {
     background-color: var(--color--gray-200);
@@ -8,6 +9,7 @@
 
 [data-theme='dark'] :host {
   --background-color: var(--theme--background-accent);
+  --well__color: var(--color--gray-900);
 
   &.well-on-gray {
     background-color: var(--color--gray-800);
@@ -47,7 +49,7 @@
   }
 
   &.well {
-    background-color: var(--color--gray-50);
+    background-color: var(--well__color);
     box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
   }
 }
