--- a/projects/navigation/switcher/src/lib/switcher.component.html
+++ b/projects/navigation/switcher/src/lib/switcher.component.html
@@ -15,10 +15,12 @@
   <nav role="navigation" [attr.aria-label]="link?.title">
     <ng-container *ngFor="let sublink of link?.links">
       <div *ngIf="sublink.dividerPosition === 'ABOVE'" class='divider'></div>
-      <a *ngIf="!sublink.onClick" [routerLink]="sublink?.href || '.'" [fragment]="sublink?.fragment || null"
+      <a *ngIf="!sublink.onClick && !sublink?.external" [routerLink]="sublink?.href || '.'"
+        [fragment]="sublink?.fragment || null" class="nav__link">{{ sublink.title }}</a>
+      <a *ngIf="!sublink.onClick && sublink.external" href="{{ sublink?.href }}" rel="noopener" target="_blank"
         class="nav__link">{{ sublink.title }}</a>
       <a *ngIf="sublink.onClick" (click)="sublink.onClick()" class="nav__link">{{ sublink.title }}</a>
-      <div *ngIf="sublink.dividerPosition === 'BELOW'" class='divider'></div>
+      <div *ngIf="sublink.dividerPossition === 'BELOW'" class='divider'></div>
     </ng-container>
 
     <ng-content select=".content"></ng-content>
