feat(avatar): add CSS variable for white space on profile styles

--- a/projects/avatar/src/lib/profile/profile.component.scss
+++ b/projects/avatar/src/lib/profile/profile.component.scss
@@ -30,6 +30,7 @@
   &__subtitle {
     --font-size: var(--font-size--small);
     color: var(--subtitle-color, currentColor);
+    white-space: var(--subtitle__white-space, normal);
 
     &:empty {
       display: none;
